--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <div id="question-container" class="hide"></div>
+        <div id="question-container" class="hide">
         <div id="question">Question</div>
         <div id="answer-buttons" class="btn-grid">
             <button class="btn">Answer 1</button>
@@ -23,7 +23,7 @@
     </div>
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
-        <button id="next-btn" class="start-btn btn hide">Next</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
     </div>
     </div>
     </div>
