--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -29,7 +29,7 @@
     </div>
 
     <!-- JS Code here -->
-    <script src="../js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
